# Schwarzschild-Black-Hole

./: CMakeLists.txt  README.md  main.cpp
include/: constants.h  geodesics.h  globals.h
integrator/: integrator.h  integrator.tpp
src/: constants.cpp  geodesics.cpp
